# trading212-mcp-server

./: .gitignore  Makefile  README.md  accounts.json.example  pyproject.toml
docs/superpowers/plans/: 2026-04-21-multi-account.md  2026-04-23-multi-account-support.md
docs/superpowers/specs/: 2026-04-21-multi-account-design.md  2026-04-23-multi-account-design.md
scripts/: README.md  bootstrap.sh  configure_claude_mcp.sh  run_server.sh  validate_setup.sh
src/: accounts.py  config.py  mcp_server.py  prompts.py  resources.py  tools.py
src/utils/: client.py  hishel_config.py  response.py
tests/: test_accounts.py  test_cache_isolation.py  test_resources.py  test_response.py
